--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -41,8 +41,8 @@
         <!-- Barra de navegación verde oliva -->
         <mat-toolbar class="nav-toolbar">
           <div class="nav-toolbar-left">
-            <mat-icon class="nav-icon">public</mat-icon>
-            <span class="nav-title"> Municipalidad Distrital de San Juan de Lurigancho, Portal de la Información</span>
+            <mat-icon class="nav-icon">domain</mat-icon>
+            <span class="nav-title"> Municipalidad Distrital de  <span class="nav-title-small">San Juan de Lurigancho, Portal de la Información</span></span>
           </div>
           <div class="nav-toolbar-right">
             <!-- Botón hamburguesa solo en móvil -->
@@ -77,7 +77,7 @@
       <!-- Barra de navegación verde oliva -->
       <mat-toolbar class="nav-toolbar">
         <div class="nav-toolbar-left">
-          <mat-icon class="nav-icon">public</mat-icon>
+          <mat-icon class="nav-icon">domain</mat-icon>
           <span class="nav-title"> Municipalidad Distrital de San Juan de Lurigancho, Portal de la Información</span>
         </div>
         <div class="nav-toolbar-right">
